the change. The entry should contain a summary of the ABI changes made,
including what symbols were added, removed, or changed.

To generate a summary, re-generate the new ABI list using the
`generate-cxx-abilist` target, and look at the diff.

New entries should be added directly below the "Version" header.

------------
Version 20.0
------------

* [libc++] Remove the pointer safety functions from the dylib

  The pointer safety functions were never implemented by anyone in a non-trivial
  way, which lead us to removing them entirely from the headers when they were
  removed in C++23. This also means that just about nobody ever called these
  functions, especially not in production code. Because of that, we expect there
  to be no references in the wild to the functions in the dylib.

  Symbol removed: _ZNSt3__117declare_reachableEPv
  Symbol removed: _ZNSt3__119declare_no_pointersEPcm
  Symbol removed: _ZNSt3__121__undeclare_reachableEPv
  Symbol removed: _ZNSt3__121undeclare_no_pointersEPcm

* [libcxx][libc] Implements from_chars floating-point

  All platforms
  -------------
  Symbol added: _ZNSt3__127__from_chars_floating_pointIdEENS_19__from_chars_resultIT_EEPKcS5_NS_12chars_formatE
  Symbol added: _ZNSt3__127__from_chars_floating_pointIfEENS_19__from_chars_resultIT_EEPKcS5_NS_12chars_formatE

* [libc++] Stop trying to avoid exporting some typeinfo names

  This patch removes the explicit list of symbols to avoid exporting
  from the library, which at this point doesn't cover much anyways.
  That makes us export some new symbols on Appl platforms, namely the
  typeinfo names for some implementation-detail types. While we
  technically wouldn't have to export those (I don't think any user
  can get their hands on those typeinfo names), that makes the library
  more consistent on all platforms.

  <arch>-apple-darwin
  -------------------
  Symbol added: __ZTSNSt3__114__codecvt_utf8IDsEE
  Symbol added: __ZTSNSt3__114__codecvt_utf8IwEE